--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -10,3 +10,8 @@
 	color:#f6d6a6 !important;
 }
 
+.justify-content-center
+{
+	-ms-flex-pack: center !important;
+	justify-content: center !important;
+}
